# usagebench

./: .dockerignore  .gitignore  AGENTS.md  ARTIFACT.md  CITATION.cff  Cargo.toml  LICENSE.md  README.md  RELEASES.md
.brokk/: project.properties
.github/workflows/: benchmark.yml  docs.yml  reference-environments.yml  release.yml  test.yml
adapters/lsp/: README.md  ccls.json  clangd-configured.json  clangd.json  csharp-ls.json  eclipse-jdtls.json  gopls.json  intelephense.json  metals.json  phpactor.json  pyright.json  roslyn.json  ruby-lsp.json  rust-analyzer.json  solargraph.json  typescript-language-server.json
benchmarks/: README.md
benchmarks/cases/: cpp-baseline.yaml  cpp-lsp-parity.yaml  cpp-precision.yaml  go-baseline.yaml  (+32 more)
dataset/: java_repositories.csv  python_repositories.csv
docs/: README.md  astro.config.mjs  execplan-bifrost-baseline-benchmark.md  execplan-containerized-reference-environments.md  execplan-lsp-parity-corpus.md  lsp-result-audit.md  package-lock.json  package.json  runner-adapters.md
gogen/: README.md  benchmarks.csv  go.mod  gogen.go
javagen/: README.md  build.sbt  javagen  log4j2.xml
pygen/: README.md  analyzer.py  clone_util.py  debug_jedi.py  main.py  models.py  pyproject.toml  requirements.txt
pygen/tests/: test_basic.py  test_fqn_consistency.py  test_method_usages.py  test_type_usages.py  test_variable_usages.py
schema/: benchmark-case.schema.json  reference-environment.schema.json
scripts/: reference-image.sh  reproduce-report.sh  run-reference.sh  stage-release-bundle.sh
src/: bifrost_runner.rs  lib.rs  main.rs
(+158 files in other folders)
