[project]
name = "pygen"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "jedi>=0.19.1",
    "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
